--- a/main.tex
+++ b/main.tex
@@ -58,8 +58,8 @@
 \cvlistitem{Some TN machine learning model, such as the MPS for image classification/generation and the Tree TN for image generation.}
 \cvlistitem{Python/Matlab language}
 
-\section{Interests}
-\cvlistitem{Currently, I'm interest in both the traditional tensor network algorithms (on many body physics) and its application on machine learning and quantum computing problems.} %I care about the information/entanglement/entropy in both tensor network models and traditional machine learning models. }
+\section{Research Interest}
+\cvlistitem{I'm interest in both the traditional tensor network algorithms (on many body physics) and its new application on classical and quantum machine learning.} %I care about the information/entanglement/entropy in both tensor network models and traditional machine learning models. }
 %\cvitem{ Tensor Networks}{Description}
 %\cvitem{Machine learning}{Description}
 %\cvitem{Quantum computation}{Description}
@@ -78,13 +78,14 @@
 %\cvitem{2012, 2013 and 2014}{Top Talents Scholarship on Fundamental Disciplines of the Ministry of Education of China.}
 
 \section{Publications }
-\cvlistitem{total citation: 129}
+\cvlistitem{total citation: 201}
 \cventry{[1]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.99.155131}{Tree Tensor Networks for Generative Modeling}}{}{}{}{\textbf{S. Cheng}, L. Wang, T. Xiang, P. Zhang, Physical Review B,99.155131}
 \date{}
 \cventry{[2]}{ \href{https://www.mdpi.com/1099-4300/20/8/583}{Information perspective to probabilistic modeling: Boltzmann machines versus born machines}}{}{}{}{\textbf{S. Cheng}, J. Chen, L. Wang, Entropy 2018, 20, 583.}
-\cventry{[3]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 97 (8), 085104.}
-\cventry{[4]}{\href{https://arxiv.org/abs/1904.06194}{Compressing deep neural networks by matrix product operators}}{}{}{}{Z. F. Gao, \textbf{S. Cheng (co-author)}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, arXiv:1904.06194}
-\cventry{[5]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
+\cventry{[3]}{ \href{https://arxiv.org/abs/2004.02388}{Simulating Noisy Quantum Circuits with Matrix Product Density Operators}}{}{}{}{\textbf{Song Cheng}, Chenfeng Cao, Chao Zhang, Yongxiang Liu, Shi-Yao Hou, Pengxiang Xu, Bei Zeng. arXiv:2004.02388}
+\cventry{[4]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 97 (8), 085104.}
+\cventry{[5]}{\href{https://arxiv.org/abs/1904.06194}{Compressing deep neural networks by matrix product operators}}{}{}{}{Z. F. Gao, \textbf{S. Cheng (co-author)}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, arXiv:1904.06194}
+\cventry{[6]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
 
 \section{Conferences}
 \cvitem{1}{\textbf{Tree Tensor Network for Generative Modeling} \newline
