--- a/main.tex
+++ b/main.tex
@@ -86,7 +86,7 @@
 \cventry{[4]}{\href{https://journals.aps.org/prb/abstract/10.1103/PhysRevB.97.085104}{Equivalence of restricted Boltzmann machines and tensor network states}}{}{}{}{J. Chen, \textbf{S. Cheng}, H. Xie, L. Wang, T. Xiang, Physical Review B, 97 (8), 085104.}
 \cventry{[5]}{\href{https://arxiv.org/abs/1904.06194}{Compressing deep neural networks by matrix product operators}}{}{}{}{Z. F. Gao, \textbf{S. Cheng (co-author)}, R. Q. He, Z. Y. Xie, H. H. Zhao, Zhong Y. Lu, and T. Xiang, arXiv:1904.06194}
 \cventry{[6]}{\href{http://iopscience.iop.org/article/10.1088/0256-307X/34/5/050503}{Phase Transition of the q-State Clock Model: Duality and Tensor Renormalization}}{}{}{}{Chen, J., Liao, H.-J., Xie, H.-D., Han, X.-J., Huang, R.-Z., \textbf{Cheng, S.}, et al.\ 2017, Chinese Physics Letters, 34, 050503.}
-
+\cventry{[7]}{\href{http://www.wuli.ac.cn/CN/article/downloadArticleFile.do?attachType=PDF&id=70504}{Quantum entanglement: from quantum matter states to deep learning}}{}{}{}{\textbf{Cheng Song}, Chen Jing, Wang Lei. Physics  46 (7), 416-423 (This journal is in Chinese)}
 \section{Conferences}
 \cvitem{1}{\textbf{Tree Tensor Network for Generative Modeling} \newline
 The APS March Meeting, Boston, 2019.}
